# ProjectMitrichev3

./: CMakeLists.txt  README.md  main.cpp  solver.cpp  solver.h  tests.cpp
.github/workflows/: build-and-test.yml
